--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,7 +10,7 @@
 	<div class="admonition info">
 		{% if i18n_page_locale == "de" %}
 			<p class="admonition-title">Info</p>
-			<p>Leider war es uns noch nicht möglich, diese Seite für Sie auf Deutsch zu übersetzen. Wir zeigen daher stattdessen die englischsprachige Version der Seite und bitte um Verständnis.</p>
+			<p>Leider war es uns noch nicht möglich, diese Seite für Sie auf Deutsch zu übersetzen. Wir zeigen daher stattdessen die englischsprachige Version der Seite und bitten um Verständnis.</p>
 		{% else %}
 			<p class="admonition-title">Info</p>
 			<p>This page is unfortunately not yet translated to your language. We are showing the English version instead.</p>
