--- a/overrides/main.html
+++ b/overrides/main.html
@@ -13,7 +13,7 @@
 			<p>Leider war es uns noch nicht möglich, diese Seite für Sie auf Deutsch zu übersetzen. Wir zeigen daher stattdessen die englischsprachige Version der Seite und bitten um Verständnis.</p>
 		{% else %}
 			<p class="admonition-title">Info</p>
-			<p>This page is unfortunately not yet translated to your language. We are showing the English version instead.</p>
+			<p>This page unfortunately has not yet been translated into your language. We are showing the English version instead.</p>
 		{% endif %}
 	</div>
 	{% endif %}
