--- a/overrides/main.html
+++ b/overrides/main.html
@@ -9,10 +9,10 @@
 	{% if i18n_file_locale != i18n_page_locale %}
 	<div class="admonition info">
 		{% if i18n_page_locale == "de" %}
-			<p class="admonition-title">Info</p>
+			<p class="admonition-title">Übersetzungshinweis</p>
 			<p>Leider war es uns noch nicht möglich, diese Seite für Sie auf Deutsch zu übersetzen. Wir zeigen daher stattdessen die englischsprachige Version der Seite und bitten um Verständnis.</p>
 		{% else %}
-			<p class="admonition-title">Info</p>
+			<p class="admonition-title">Translation notice</p>
 			<p>This page unfortunately has not yet been translated into your language. We are showing the English version instead.</p>
 		{% endif %}
 	</div>
