Translation & accessibility improvements (#44)
* Translate admonitions

* Add translation notice

* Add i18n to custom code

* Update overrides/hooks/custommarkup.py

Co-authored-by: leiascyr <156191181+leiascyr@users.noreply.github.com>

* Update overrides/hooks/shortcodes.py

Co-authored-by: leiascyr <156191181+leiascyr@users.noreply.github.com>

* Update overrides/main.html

Co-authored-by: leiascyr <156191181+leiascyr@users.noreply.github.com>

* Update overrides/main.html

Co-authored-by: leiascyr <156191181+leiascyr@users.noreply.github.com>

* Review notes

---------

Co-authored-by: leiascyr <156191181+leiascyr@users.noreply.github.com>

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -4,3 +4,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i%7CRoboto+Mono:400,400i,700,700i%7CTitillium+Web:400,700' }}&display=fallback">
 {% endblock %}
+
+{% block content %}
+	{% if i18n_file_locale != i18n_page_locale %}
+	<div class="admonition info">
+		{% if i18n_page_locale == "de" %}
+			<p class="admonition-title">Übersetzungshinweis</p>
+			<p>Leider war es uns noch nicht möglich, diese Seite für Sie auf Deutsch zu übersetzen. Wir zeigen daher stattdessen die englischsprachige Version der Seite und bitten um Verständnis.</p>
+		{% else %}
+			<p class="admonition-title">Translation notice</p>
+			<p>This page unfortunately has not yet been translated into your language. We are showing the English version instead.</p>
+		{% endif %}
+	</div>
+	{% endif %}
+	{% include "partials/content.html" %}
+{% endblock %}
